--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Graphic Designer and aspiring UI/UX Designer</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
