updating the details on the website

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
       <h1>Introduction</h1>
       <p>I am a Graphic Designer and aspiring UI/UX Designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I spent most of my childhood in Shelburne but I have bounced around a bunch of small towns throughout Ontario. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to keep myself busy mentally and physically, I follow MMA and train in boxing, I also play chess and fish regularly.<br>
+        I don't shy away from hanging out and playing video games as well. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm not sure yet to be honest I'm keeping my options open I like to try a lot of different things.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I'm living in Exeter, Ontario a small town in South Western Ontario<br>
+        known for its white squirrels.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like designing websites but thats really only 1 half of the job, I want to be able to design and develop a responsive and beautiful design.</p>
     </section>
 
     <footer id="footer">
